# oddluck-limnoria-plugins

Azure/: pyproject.toml
CAH/: pyproject.toml
Cayenne/: pyproject.toml
ChatGPT/: pyproject.toml
Dice/: pyproject.toml
DuckHunt/: pyproject.toml
Fun/: pyproject.toml
Gemini/: pyproject.toml
Geo/: pyproject.toml
GoogleCloud/: pyproject.toml
HuntNFish/: pyproject.toml
IMDb/: pyproject.toml
Soccer/: pyproject.toml
TVMaze/: pyproject.toml
TextArt/: pyproject.toml
TimeBomb/: pyproject.toml
UNO/: pyproject.toml
Undercut/: pyproject.toml
UndernetX/: pyproject.toml
Unicode/: pyproject.toml
UrbanDictionary/: pyproject.toml
WolframAlpha/: pyproject.toml
WordGames/: pyproject.toml
WorldTime/: pyproject.toml
YouTube/: pyproject.toml
