[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-azure"
version = "2020.02.24+git"
authors = [
    { name = "oddluck <oddluck@riseup.net>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
    "requests",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Azure = "limnoria_azure"

[tool.setuptools.package-dir]
"limnoria_azure" = "."
"limnoria_azure.local" = "local/"

[tool.setuptools.package-data]
"limnoria_azure" = ["locales/*.po"]
