[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-chatgpt"
version = "0.0.0"
authors = [
    { name = "oddluck" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
ChatGPT = "limnoria_chatgpt"

[tool.setuptools.package-dir]
"limnoria_chatgpt" = "."
"limnoria_chatgpt.local" = "local/"

[tool.setuptools.package-data]
"limnoria_chatgpt" = ["locales/*.po"]
