[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-fun"
version = "2020.02.24+git"
authors = [
    { name = "oddluck <oddluck@riseup.net>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
    "beautifulsoup4",

    "requests",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Fun = "limnoria_fun"

[tool.setuptools.package-dir]
"limnoria_fun" = "."
"limnoria_fun.local" = "local/"

[tool.setuptools.package-data]
"limnoria_fun" = ["locales/*.po"]
