[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-gemini"
version = "0.0.0"
authors = [
    { name = "oddluck" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Gemini = "limnoria_gemini"

[tool.setuptools.package-dir]
"limnoria_gemini" = "."
"limnoria_gemini.local" = "local/"

[tool.setuptools.package-data]
"limnoria_gemini" = ["locales/*.po"]
