[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-imdb"
version = "2020.06.01+git"
authors = [
    { name = "butterscotchstallion" },
    { name = "oddluck <oddluck@riseup.net>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
IMDb = "limnoria_imdb"

[tool.setuptools.package-dir]
"limnoria_imdb" = "."
"limnoria_imdb.local" = "local/"

[tool.setuptools.package-data]
"limnoria_imdb" = ["locales/*.po"]
