[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-textart"
version = "2020.06.01+git"
authors = [
    { name = "oddluck <oddluck@riseup.net>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
    "beautifulsoup4",

    "numpy",

    "pexpect",

    "pillow",

    "pyimgur",

    "requests",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
TextArt = "limnoria_textart"

[tool.setuptools.package-dir]
"limnoria_textart" = "."
"limnoria_textart.local" = "local/"

[tool.setuptools.package-data]
"limnoria_textart" = ["locales/*.po"]
