[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-timebomb"
version = "2020.02.24+git"
authors = [
    { name = "quantumlemur" },
    { name = "oddluck <oddluck@riseup.net>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
TimeBomb = "limnoria_timebomb"

[tool.setuptools.package-dir]
"limnoria_timebomb" = "."
"limnoria_timebomb.local" = "local/"

[tool.setuptools.package-data]
"limnoria_timebomb" = ["locales/*.po"]
