[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-uno"
version = "2020.02.24+git"
authors = [
    { name = "oddluck <oddluck@riseup.net>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
UNO = "limnoria_uno"

[tool.setuptools.package-dir]
"limnoria_uno" = "."
"limnoria_uno.local" = "local/"

[tool.setuptools.package-data]
"limnoria_uno" = ["locales/*.po"]
