[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-undercut"
version = "2020.02.24+git"
authors = [
    { name = "oddluck <oddluck@riseup.net>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Undercut = "limnoria_undercut"

[tool.setuptools.package-dir]
"limnoria_undercut" = "."
"limnoria_undercut.local" = "local/"

[tool.setuptools.package-data]
"limnoria_undercut" = ["locales/*.po"]
