[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-unicode"
version = "2020.02.24+git"
authors = [
    { name = "Michael B. Klein" },
    { name = "oddluck <oddluck@riseup.net>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
Unicode = "limnoria_unicode"

[tool.setuptools.package-dir]
"limnoria_unicode" = "."
"limnoria_unicode.local" = "local/"

[tool.setuptools.package-data]
"limnoria_unicode" = ["locales/*.po"]
