[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-urbandictionary"
version = "2020.02.24+git"
authors = [
    { name = "spline" },
    { name = "oddluck <oddluck@riseup.net>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
UrbanDictionary = "limnoria_urbandictionary"

[tool.setuptools.package-dir]
"limnoria_urbandictionary" = "."
"limnoria_urbandictionary.local" = "local/"

[tool.setuptools.package-data]
"limnoria_urbandictionary" = ["locales/*.po"]
