[build-system]
requires = ["setuptools"]

[project]
name = "limnoria-youtube"
version = "2020.05.21+git"
authors = [
    { name = "butterscotchstallion" },
    { name = "oddluck <oddluck@riseup.net>" },
]
readme = "README.md"
dependencies = [
    "limnoria",
]
classifiers = [
    'Environment :: Plugins',
    'Programming Language :: Python :: 3',
    'Topic :: Communications :: Chat',
]

[project.entry-points.'limnoria.plugins']
YouTube = "limnoria_youtube"

[tool.setuptools.package-dir]
"limnoria_youtube" = "."
"limnoria_youtube.local" = "local/"

[tool.setuptools.package-data]
"limnoria_youtube" = ["locales/*.po"]
